; Common library for ocgtk
; Hand-written library-agnostic code

; Configure pkg-config for GTK4

(rule
 (targets cflag-gtk4.sexp clink-gtk4.sexp)
 (action
  (bash
   "pkg-config --cflags gtk4 > cflag-gtk4.tmp && pkg-config --libs gtk4 > clink-gtk4.tmp && echo \"(\" > cflag-gtk4.sexp && tr ' ' '\\n' < cflag-gtk4.tmp | sed 's/^\\(.*\\)$/\\1/' | tr '\\n' ' ' >> cflag-gtk4.sexp && echo \")\" >> cflag-gtk4.sexp && echo \"(\" > clink-gtk4.sexp && tr ' ' '\\n' < clink-gtk4.tmp | sed 's/^\\(.*\\)$/\\1/' | tr '\\n' ' ' >> clink-gtk4.sexp && echo \")\" >> clink-gtk4.sexp && rm cflag-gtk4.tmp clink-gtk4.tmp")))

(library
 (name ocgtk_common)
 (public_name ocgtk.common)
 (wrapped false)
 (libraries integers)
 (foreign_stubs
  (language c)
  (names
   wrappers
   ml_glib
   ml_gobject
   ml_gvariant
   ml_gvariant_type
   ml_glib_bytes)
  (flags
   -fPIC
   -I../gtk/generated
   (:include cflag-gtk4.sexp)
   -Wno-deprecated-declarations))
 (c_library_flags
  (:include clink-gtk4.sexp))
 (install_c_headers wrappers)
 ; UInt8/UInt16/UInt32/UInt64 come from uInt8.ml/uInt16.ml/uInt32.ml/uInt64.ml respectively.
 ; Int8/Int16/Int32 come from int8.ml/int16.ml/int32.ml respectively.
 (modules
  ocgtk_common
  Gaux
  Gpointer
  GError
  Gobject
  Glib
  Gvariant
  Gvariant_type
  Glib_bytes
  Bounded_int
  UInt8
  Int8
  UInt16
  Int16
  UInt32
  Int32
  UInt64
  Gsize))
