; Include subdirectories to find modules in core/ and generated/

(include_subdirs unqualified)

; Include generated C stubs library definition

(include generated/dune-generated.inc)

; Configure pkg-config for GDK (using gtk4 as GDK is bundled with it)

(rule
 (targets c_flags.sexp)
 (action
  (run
   %{exe:../configurator/config_flags.exe}
   --pkg
   gtk4
   --cflags-out
   c_flags.sexp)))

; Code generation for GDK bindings
; To regenerate bindings from GIR files, run:
;   ./scripts/generate-bindings.sh
; This writes to src/gdk/generated/ in the source tree

; Main GDK library combining core and generated code

(library
 (name ocgtk_gdk)
 (public_name ocgtk.gdk)
 (synopsis "OCaml bindings for GDK")
 (wrapped true)
 (flags :standard -w -3-6-9-27-32-33-34-50)
 (modules :standard)
 (modules_without_implementation gdk_enums)
 (foreign_stubs
  (language c)
  (names ml_gdk)
  (flags
   :standard
   -Igenerated
   -Icore
   (:include c_flags.sexp)))
 (libraries ocgtk.common ocgtk_gdk_generated_stubs))
