; Include subdirectories to find modules in core/ and generated/
(include_subdirs unqualified)

; Include generated C stubs library definition
(include generated/dune-generated.inc)

; Configure pkg-config for GdkPixbuf
(rule
 (targets c_flags.sexp)
 (action
  (with-stdout-to %{targets}
   (bash "echo '(' && pkg-config --cflags gdk-pixbuf-2.0 && echo ')'"))))

; Main GdkPixbuf library combining core and generated code
(library
 (name ocgtk_gdkpixbuf)
 (public_name ocgtk.gdkpixbuf)
 (synopsis "OCaml bindings for GdkPixbuf")
 (wrapped true)
 (flags :standard -w -3-6-9-27-32-33-34-50)
 (modules :standard)
 (modules_without_implementation gdkpixbuf_enums)
 (foreign_stubs
  (language c)
  (names ml_gdkpixbuf)
  (flags :standard -Igenerated -Icore (:include c_flags.sexp)))

 (libraries ocgtk.common ocgtk_gio ocgtk_gdk_pixbuf_generated_stubs))
