; Include subdirectories to find modules in core/ and generated/

(include_subdirs unqualified)

; Include generated C stubs library definition

(include generated/dune-generated.inc)

; Configure pkg-config for GIO

(rule
 (targets c_flags.sexp)
 (action
  (run
   %{exe:../configurator/config_flags.exe}
   --pkg
   gio-2.0
   --pkg-optional
   gio-unix-2.0
   --cflags-out
   c_flags.sexp)))

; Code generation for GIO bindings
; To regenerate bindings from GIR files, run:
;   ./scripts/generate-bindings.sh
; This writes to src/gio/generated/ in the source tree

; Main GIO library combining core and generated code

(library
 (name ocgtk_gio)
 (public_name ocgtk.gio)
 (synopsis "OCaml bindings for GIO")
 (wrapped true)
 (flags :standard -w -3-6-9-27-32-33-34-50)
 (modules :standard)
 (foreign_stubs
  (language c)
  (names ml_gio)
  (flags
   :standard
   -Igenerated
   -Icore
   -I../common
   (:include c_flags.sexp)))
 (libraries ocgtk.common ocgtk_gio_generated_stubs))
