; Test suite for GTK library

(test
 (name test_string_list)
 (modules test_string_list)
 (libraries ocgtk.gtk alcotest))

(test
 (name test_box)
 (modules test_box)
 (libraries ocgtk.gtk alcotest))

(test
 (name test_widget)
 (modules test_widget)
 (libraries ocgtk.gtk alcotest))

(test
 (name test_button)
 (modules test_button)
 (libraries ocgtk.gtk alcotest))

(test
 (name test_range)
 (modules test_range)
 (libraries ocgtk.gtk alcotest))
