; Test suite for GTK library

(library
 (name gtk_test_helpers)
 (wrapped false)
 (modules gtk_test_helpers)
 (libraries ocgtk.gtk alcotest))

(test
 (name test_string_list)
 (modules test_string_list)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_box)
 (modules test_box)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_widget)
 (modules test_widget)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_button)
 (modules test_button)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_range)
 (modules test_range)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_variance)
 (modules test_variance)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_interface)
 (modules test_interface)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_record_finalizer)
 (modules test_record_finalizer)
 (libraries ocgtk.gtk alcotest gtk_test_helpers))

(test
 (name test_value_kinds)
 (modules test_value_kinds)
 (libraries ocgtk.common alcotest))
