; Dune file for GIR Code Generator modules
; Use qualified subdirectories for better organization

(include_subdirs qualified)

; Common modules library (excludes main)
 (library
  (name gir_gen_lib)
  (modules :standard \ gir_gen)
  (libraries str unix xmlm logs logs.fmt containers re)
  (flags (:standard -w -32)))

; Main executable
(executable
 (name gir_gen)
 (public_name gir_gen)
 (modules gir_gen)
 (libraries gir_gen_lib cmdliner)
 (flags (:standard -w -27)))
