(include_subdirs unqualified)

(test
 (name test_gir_gen)
 (modules
  helpers
  pipeline_tmp
  c_compiler
  gir_parsing_tests
  widget_generation_tests
  nullable_generation_tests
  cli_tests
  gir_parser_tests
  signals_tests
  enums_tests
  records_tests
  properties_tests
  edge_cases_tests
  c_ast
  c_parser
  c_validation
  c_validation_tests
  ml_ast_helpers
  ml_validation
  layer2_helpers
  generation_tests
  header_naming_tests
  header_generation_tests
  nullable_tests
  error_handling_tests
  out_params_tests
  array_tests
  type_conversion_tests
  type_definition_tests
  external_decl_tests
  signature_tests
  method_wrapper_tests
  constructor_wrapper_tests
  signal_wrapper_tests
  c_stub_tests
  no_external_enum_decls_tests
  no_external_bitfield_decls_tests
  dependency_includes_tests
  dependency_exclusion_tests
  c_stub_include_tests
  classify_type_tests
  header_pipeline_tests
  compilation_tests
  version_guard_tests
  c_stub_version_guard_tests
  fixtures
  types_tests
  parser_tests
  apply_tests
  extractor_tests
  apply_with_parsed_gir_tests
  pipeline_tests
  enum_member_version_tests
  parsing_tests
  from_gobject_tests
  interface_inheritance_tests
  interface_method_types_tests
  test_gir_gen
  type_factory)
 (deps
  %{exe:../gir_gen/gir_gen.exe}
  (source_tree %{project_root}/ocgtk/gir))
 (action
  (setenv
   "GIR_DATA_DIR"
   "%{project_root}/ocgtk/gir"
   (run %{test})))
 (libraries str unix gir_gen_lib alcotest ppxlib sexplib))
